Avance,SASS agregado

--- a/index.html
+++ b/index.html
@@ -27,5 +27,61 @@
 				<li class="social-item"></li>
 			</ul>
 		</header>
+
+		<div class="wrapper">
+			<div class="mainContent">
+				<div class="blogPost mainPost">
+					<h2 class="mainTitle">Microsoft entierra a Internet Explorer, geeks felices tras decicisión</h2>
+
+					<span class="publishDate">17 Marzo 2015</span>
+
+					<p class="previewInfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem at ut fugiat, suscipit in magni reiciendis quibusdam nostrum, rerum facere quisquam aliquam maxime nulla vero error voluptate neque officiis. Accusamus laboriosam neque illum sed dolorum aperiam magnam vel, unde itaque ipsum eius nam, voluptatem et, enim suscipit in animi, ducimus possimus iusto earum sapiente incidunt maiores quisquam repellat. Error deleniti officia deserunt velit nulla, repellat totam voluptatem soluta perferendis dolorem autem consequatur, libero labore minus ex itaque consequuntur corrupti, magnam ut quasi. Perspiciatis ipsam non tenetur, repellat, deserunt delectus neque.</p>
+
+					<a href="#" class="viewMore">Ver mas ></a>
+				</div><!--MAIN Post-->
+
+				<div class="blogpost">
+					<h1 class="blogpostTitle">Class aptent taciti sociosqu ad litora</h1>
+
+					<span class="publishDate">17 Marzo 2015</span>
+
+					<p class="blogpostInfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad tenetur ducimus. Molestias recusandae explicabo nesciunt reprehenderit consequatur fugiat maiores eveniet ab aut cupiditate saepe magni, ut temporibus ducimus animi unde assumenda, illum atque iure, mollitia itaque! Quis, inventore, obcaecati aliquid corrupti tenetur incidunt laborum in voluptate, praesentium quasi doloribus aperiam rerum dolorem autem consequatur veniam delectus? Quis, incidunt voluptatum!</p>
+
+					<a href="#" class="viewMore">Ver Más</a>
+				</div><!--BLOGPOST-->
+
+				<div class="blogpost">
+					<h1 class="blogpostTitle">Class aptent taciti sociosqu ad litora</h1>
+
+					<span class="publishDate">17 Marzo 2015</span>
+
+					<p class="blogpostInfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad tenetur ducimus. Molestias recusandae explicabo nesciunt reprehenderit consequatur fugiat maiores eveniet ab aut cupiditate saepe magni, ut temporibus ducimus animi unde assumenda, illum atque iure, mollitia itaque! Quis, inventore, obcaecati aliquid corrupti tenetur incidunt laborum in voluptate, praesentium quasi doloribus aperiam rerum dolorem autem consequatur veniam delectus? Quis, incidunt voluptatum!</p>
+
+					<a href="#" class="viewMore">Ver Más</a>
+				</div><!--BLOGPOST-->
+
+				<div class="blogpost">
+					<h1 class="blogpostTitle">Class aptent taciti sociosqu ad litora</h1>
+
+					<span class="publishDate">17 Marzo 2015</span>
+
+					<p class="blogpostInfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad tenetur ducimus. Molestias recusandae explicabo nesciunt reprehenderit consequatur fugiat maiores eveniet ab aut cupiditate saepe magni, ut temporibus ducimus animi unde assumenda, illum atque iure, mollitia itaque! Quis, inventore, obcaecati aliquid corrupti tenetur incidunt laborum in voluptate, praesentium quasi doloribus aperiam rerum dolorem autem consequatur veniam delectus? Quis, incidunt voluptatum!</p>
+
+					<a href="#" class="viewMore">Ver Más</a>
+				</div><!--BLOGPOST-->
+
+				<div class="blogpost">
+					<h1 class="blogpostTitle">Class aptent taciti sociosqu ad litora</h1>
+
+					<span class="publishDate">17 Marzo 2015</span>
+
+					<p class="blogpostInfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad tenetur ducimus. Molestias recusandae explicabo nesciunt reprehenderit consequatur fugiat maiores eveniet ab aut cupiditate saepe magni, ut temporibus ducimus animi unde assumenda, illum atque iure, mollitia itaque! Quis, inventore, obcaecati aliquid corrupti tenetur incidunt laborum in voluptate, praesentium quasi doloribus aperiam rerum dolorem autem consequatur veniam delectus? Quis, incidunt voluptatum!</p>
+
+					<a href="#" class="viewMore">Ver Más</a>
+				</div><!--BLOGPOST-->
+
+				<a href="#" class="loadMore">Cargar mas</a>
+			</div><!--MAIN CONTENT-->
+		</div>
 	</body>
 </html>
